website/tests/snapshots/types/interfaces.exp
=== block 1 ===
Error -------------------------------------------------------------------------- -:14:18

Cannot assign `new Bar()` to `foo` because `Bar` [1] is incompatible with `Foo` [2]. [incompatible-type]

   -:14:18
   14| const foo: Foo = new Bar(); // Error!
                        ^^^^^^^^^ [1]

References:
   -:14:12
   14| const foo: Foo = new Bar(); // Error!
                  ^^^ [2]


Found 1 error

=== block 2 ===
Error -------------------------------------------------------------------------- -:18:12

Cannot call `acceptsObj` with `foo` bound to `x` because `Foo` [1] is not a subtype of object type [2]. Class instances
are not subtypes of object types; consider rewriting object type [2] as an interface. [class-object-subtyping]

   -:18:12
   18| acceptsObj(foo); // Error!
                  ^^^

References:
   -:5:13
    5| const foo = new Foo();
                   ^^^^^^^^^ [1]
   -:16:24
   16| function acceptsObj(x: {a: number, ...}) { /* ... */ }
                              ^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 3 ===
Error -------------------------------------------------------------------------- -:11:16

Cannot implement `Serializable` [1] with `Bar` because in property `serialize` > the return value: number [2] is
incompatible with string [3]. [incompatible-type]

   -:11:16
   11|   serialize(): number { return 42; } // Error!
                      ^^^^^^ [2]

References:
   -:10:22
   10| class Bar implements Serializable {
                            ^^^^^^^^^^^^ [1]
   -:3:16
    3|   serialize(): string;
                      ^^^^^^ [3]


Found 1 error

=== block 4 ===
No errors!

=== block 5 ===
No errors!

=== block 6 ===
No errors!

=== block 7 ===
No errors!

=== block 8 ===
Error -------------------------------------------------------------------------- -:11:22

Cannot assign `a.method(...)` to `z` because string [1] is incompatible with boolean [2]. [incompatible-type]

   -:11:22
   11|   const z: boolean = a.method('hi'); // Error!
                            ^^^^^^^^^^^^^^

References:
   -:3:26
    3|   method(value: string): string;
                                ^^^^^^ [1]
   -:11:12
   11|   const z: boolean = a.method('hi'); // Error!
                  ^^^^^^^ [2]


Found 1 error

=== block 9 ===
No errors!

=== block 10 ===
No errors!

=== block 11 ===
No errors!

=== block 12 ===
No errors!

=== block 13 ===
No errors!

=== block 14 ===
Error ---------------------------------------------------------------------------- -:7:8

Cannot call `logAll` with `msgs` bound to `items` because string literal `foo` [1], a primitive, cannot be used as a
subtype of `$Iterable` [2]. You can wrap it in `new String(...))` to turn it into an object and attempt to use it as a
subtype of an interface. [incompatible-type]

   -:7:8
   7| logAll(msgs); // Error: `string` is not a subtype of `Iterable<string>`
             ^^^^

References:
   -:6:14
   6| const msgs = "foo";
                   ^^^^^ [1]
   -:2:24
   2| function logAll(items: Iterable<string>) {
                             ^^^^^^^^^^^^^^^^ [2]


Found 1 error

=== block 15 ===
No errors!

=== block 16 ===
No errors!

=== block 17 ===
No errors!

=== block 18 ===
Error -------------------------------------------------------------------------- -:12:27

Cannot assign `x` to `value1` because in property `property`: `number` [1] is not exactly the same as
`number | string` [2]. [incompatible-type]

The above-mentioned two types must be the same because property `property` is invariantly typed. To fix the error,
- Either make `{property: number}` [3] and `{property: number | string, ...}` [4] exactly the same
- Or make property `property` in `Invariant` [5] readonly. See
https://flow.org/en/docs/faq/#why-cant-i-pass-a-string-to-a-function-that-takes-a-string-number.

   -:12:27
   12| const value1: Invariant = x; // Error!
                                 ^

References:
   -:9:21
    9| const x: {property: number} = {property: 42};
                           ^^^^^^ [1]
   -:3:13
    3|   property: number | string;
                   ^^^^^^^^^^^^^^^ [2]
   -:9:10
    9| const x: {property: number} = {property: 42};
                ^^^^^^^^^^^^^^^^^^ [3]
   -:2:11
    2| interface Invariant {
                 ^^^^^^^^^ [4]
   -:12:15
   12| const value1: Invariant = x; // Error!
                     ^^^^^^^^^ [5]


Found 1 error

=== block 19 ===
Error --------------------------------------------------------------------------- -:16:9

Cannot assign `3.14` to `value.readOnly` because property `readOnly` is not writable. [cannot-write]

   16|   value.readOnly = 3.14; // Error!
               ^^^^^^^^


Found 1 error

=== block 20 ===
No errors!

=== block 21 ===
Error -------------------------------------------------------------------------- -:11:42

Cannot assign object literal to `value1` because in property `property`: string [1] is incompatible with number [2].
[incompatible-type]

   -:11:42
   11| const value1: Invariant     = {property: numberOrString};  // Error!
                                                ^^^^^^^^^^^^^^

References:
   -:9:51
    9| const numberOrString = Math.random() > 0.5 ? 42 : 'forty-two';
                                                         ^^^^^^^^^^^ [1]
   -:3:13
    3|   property: number;
                   ^^^^^^ [2]


Found 1 error

=== block 22 ===
Error --------------------------------------------------------------------------- -:15:9

Cannot get `value.writeOnly` because property `writeOnly` is not readable. [cannot-read]

   15|   value.writeOnly;        // Error!
               ^^^^^^^^^


Found 1 error
